@@ -277,6 +277,7 @@ search.title=S\u00F8g
 searchresult.notfound="{0}" blev ikke fundet i noget emne.
 searchresult.title=S\u00F8gning efter "{0}"
 setup.caption.adminlogin=Administrator login
+setup.error.jdk=JAMWiki requires a minimum JDK version of {0}.  The current system is reporting JDK version {1}.
 setup.error.notrequired=System setup er allerede udf\u00F8rt. Se administrations sider for at lave \u00E6ndringer.
 setup.error.upgrade=A new installation is being performed, but a JAMWiki database already exists.  If JAMWiki was previously installed, please use the upgrade process described in the UPGRADE.txt document.  If you continue with a new installation the existing database schema may not match the current JAMWiki version and errors will occur.  Press the continue button below only if you wish to continue with the new install.
 setup.title=Setup
