@@ -277,6 +277,7 @@ search.title=Suche
 searchresult.notfound="{0}" wurde in keinem Thema gefunden.
 searchresult.title=Suche nach "{0}"
 setup.caption.adminlogin=Administrator Benutzer-Login
+setup.error.jdk=JAMWiki requires a minimum JDK version of {0}.  The current system is reporting JDK version {1}.
 setup.error.notrequired=Das Aufsetzen des Systems ist schon beendet.\r\nGehen Sie zur "Admin" Seite um Einstellungen anzupassen.
 setup.error.upgrade=Eine neue Installation soll durchgef\u00FChrt werden, aber eine JAMWiki Datenbank existiert bereits. Wenn JAMWiki schon vorher installiert wurde, benutzen Sie bitte den Upgrade-Prozess, der in der Datei UPGRADE.TXT beschrieben wird.\r\nWenn Sie mit der Installation fortfahren wird das existierende Datenbank Schema wahrscheinleich nicht zur neuen JAMWiki Version passen, wodurch Fehler entstehen k\u00F6nnen.  Dr\u00FCcken Sie den "Fortfahren" Knopf nur, wenn Sie sicher sind, dass Sie mit der Neuinstallation fortfahren wollen.
 setup.title=Installation
