@@ -277,6 +277,7 @@ search.title=Rechercher
 searchresult.notfound="{0}" n'a \u00E9t\u00E9 trouv\u00E9 dans aucun sujet.
 searchresult.title=Recherche de "{0}"
 setup.caption.adminlogin=Connexion comme administrateur
+setup.error.jdk=JAMWiki requires a minimum JDK version of {0}.  The current system is reporting JDK version {1}.
 setup.error.notrequired=Installation syst\u00E8me d\u00E9j\u00E0 r\u00E9alis\u00E9e.  Voir la page administration pour modifier les r\u00E9glages.
 setup.error.upgrade=A new installation is being performed, but a JAMWiki database already exists.  If JAMWiki was previously installed, please use the upgrade process described in the UPGRADE.txt document.  If you continue with a new installation the existing database schema may not match the current JAMWiki version and errors will occur.  Press the continue button below only if you wish to continue with the new install.
 setup.title=Installation
